--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-svg": "^16.3.0",
     "socket.io-client": "^4.8.1",
     "three": "^0.172.0",
     "three-stdlib": "^2.35.13"
